hphp/test/zend/good/tests/classes/__set__get_003.php.expectf

Fatal error: Method Test::__set() must take exactly 2 arguments in %s/__set__get_003.php on line 3
